Set up layout for feed on the home page.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,89 @@
-<p>home works!</p>
+<div class="container" id="feedContainer">
+    <!-- When I create some service layer logic use an ngIf to show all referrals -->
+    <mat-card style="margin-bottom: 5px;">
+        <mat-card-header>
+            <mat-card-title style="margin-left: -20px;">Title: Software Engineer<mat-divider></mat-divider></mat-card-title>
+            <mat-card-subtitle style="margin-left: -20px;">Location: Huntsville, AL</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content>
+            <h6>Description:</h6>
+            <p>.Net Core and SQL Server</p>
+            <a data-toggle="collapse" href="#commentsCollapse" role="button" aria-expanded="false" aria-controls="commentsCollapse">Comments</a>
+            <div class="collapse" id="commentsCollapse">
+                <p>Comments: Blah Blah Blah</p>
+            </div>
+        </mat-card-content>
+        <mat-card-actions>
+             <!-- Add buttons like like or comment -->
+        </mat-card-actions>
+    </mat-card>
+    <mat-card style="margin-bottom: 5px;">
+        <mat-card-header>
+            <mat-card-title style="margin-left: -20px;">Title: Software Engineer<mat-divider></mat-divider></mat-card-title>
+            <mat-card-subtitle style="margin-left: -20px;">Location: Huntsville, AL</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content>
+            <h6>Description:</h6>
+            <p>.Net Core and SQL Server</p>
+            <a data-toggle="collapse" href="#commentsCollapse" role="button" aria-expanded="false" aria-controls="commentsCollapse">Comments</a>
+            <div class="collapse" id="commentsCollapse">
+                <p>Comments: Blah Blah Blah</p>
+            </div>
+        </mat-card-content>
+        <mat-card-actions>
+             <!-- Add buttons like like or comment -->
+        </mat-card-actions>
+    </mat-card>
+    <mat-card style="margin-bottom: 5px;">
+        <mat-card-header>
+            <mat-card-title style="margin-left: -20px;">Title: Software Engineer<mat-divider></mat-divider></mat-card-title>
+            <mat-card-subtitle style="margin-left: -20px;">Location: Huntsville, AL</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content>
+            <h6>Description:</h6>
+            <p>.Net Core and SQL Server</p>
+            <a data-toggle="collapse" href="#commentsCollapse" role="button" aria-expanded="false" aria-controls="commentsCollapse">Comments</a>
+            <div class="collapse" id="commentsCollapse">
+                <p>Comments: Blah Blah Blah</p>
+            </div>
+        </mat-card-content>
+        <mat-card-actions>
+             <!-- Add buttons like like or comment -->
+        </mat-card-actions>
+    </mat-card>
+    <mat-card style="margin-bottom: 5px;">
+        <mat-card-header>
+            <mat-card-title style="margin-left: -20px;">Title: Software Engineer<mat-divider></mat-divider></mat-card-title>
+            <mat-card-subtitle style="margin-left: -20px;">Location: Huntsville, AL</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content>
+            <h6>Description:</h6>
+            <p>.Net Core and SQL Server</p>
+            <a data-toggle="collapse" href="#commentsCollapse" role="button" aria-expanded="false" aria-controls="commentsCollapse">Comments</a>
+            <div class="collapse" id="commentsCollapse">
+                <p>Comments: Blah Blah Blah</p>
+            </div>
+        </mat-card-content>
+        <mat-card-actions>
+             <!-- Add buttons like like or comment -->
+        </mat-card-actions>
+    </mat-card>
+    <mat-card style="margin-bottom: 5px;">
+        <mat-card-header>
+            <mat-card-title style="margin-left: -20px;">Title: Software Engineer<mat-divider></mat-divider></mat-card-title>
+            <mat-card-subtitle style="margin-left: -20px;">Location: Huntsville, AL</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content>
+            <h6>Description:</h6>
+            <p>.Net Core and SQL Server</p>
+            <a data-toggle="collapse" href="#commentsCollapse" role="button" aria-expanded="false" aria-controls="commentsCollapse">Comments</a>
+            <div class="collapse" id="commentsCollapse">
+                <p>Comments: Blah Blah Blah</p>
+            </div>
+        </mat-card-content>
+        <mat-card-actions>
+             <!-- Add buttons like like or comment -->
+        </mat-card-actions>
+    </mat-card>
+    
+</div>
