--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div>
-  <mat-toolbar color="primary">
+  <mat-toolbar color="primary" style="margin-bottom: 5px;">
     <mat-toolbar-row>
       Test
       <!-- TODO: Add icon align right.  Add Login anchor tag alight left -->
