--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,89 +1,71 @@
 <div class="container" id="feedContainer">
-    <!-- When I create some service layer logic use an ngIf to show all referrals -->
-    <mat-card style="margin-bottom: 5px;">
+    <button class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Create Referral</button>
+    <mat-card style="margin-bottom: 5px;" *ngFor='let post of posts'>
         <mat-card-header>
-            <mat-card-title style="margin-left: -20px;">Title: Software Engineer<mat-divider></mat-divider></mat-card-title>
-            <mat-card-subtitle style="margin-left: -20px;">Location: Huntsville, AL</mat-card-subtitle>
+            <mat-card-title style="margin-left: -20px;">{{ post.title }}<mat-divider></mat-divider></mat-card-title>
+            <mat-card-subtitle style="margin-left: -20px;">{{ post.location }}</mat-card-subtitle>
         </mat-card-header>
         <mat-card-content>
             <h6>Description:</h6>
-            <p>.Net Core and SQL Server</p>
+            <p>{{ post.description }}</p>
             <a data-toggle="collapse" href="#commentsCollapse" role="button" aria-expanded="false" aria-controls="commentsCollapse">Comments</a>
             <div class="collapse" id="commentsCollapse">
                 <p>Comments: Blah Blah Blah</p>
             </div>
         </mat-card-content>
         <mat-card-actions>
-             <!-- Add buttons like like or comment -->
+             Add buttons like like or comment 
         </mat-card-actions>
     </mat-card>
-    <mat-card style="margin-bottom: 5px;">
-        <mat-card-header>
-            <mat-card-title style="margin-left: -20px;">Title: Software Engineer<mat-divider></mat-divider></mat-card-title>
-            <mat-card-subtitle style="margin-left: -20px;">Location: Huntsville, AL</mat-card-subtitle>
-        </mat-card-header>
-        <mat-card-content>
-            <h6>Description:</h6>
-            <p>.Net Core and SQL Server</p>
-            <a data-toggle="collapse" href="#commentsCollapse" role="button" aria-expanded="false" aria-controls="commentsCollapse">Comments</a>
-            <div class="collapse" id="commentsCollapse">
-                <p>Comments: Blah Blah Blah</p>
+</div>
+
+<div class="modal" tabindex="-1" role="dialog" id="exampleModal" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <form [formGroup]="createReferralForm" (ngSubmit)="onSubmit()">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Create Referral</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+              <div class="form-row" style="width: 100%;">
+                  <div class="form-group" style="width: inherit;">
+                      <label>Location:</label>
+                      <input type="text" id="location" formControlName="location" class="form-control" >
+                  </div>
+              </div>
+              <div class="form-row">
+                  <div class="form-group" style="width: 100%;">
+                    <label for="title">Job Title:</label>
+                    <input id="title" class="form-control" type="text" formControlName="title">
+                </div>
             </div>
-        </mat-card-content>
-        <mat-card-actions>
-             <!-- Add buttons like like or comment -->
-        </mat-card-actions>
-    </mat-card>
-    <mat-card style="margin-bottom: 5px;">
-        <mat-card-header>
-            <mat-card-title style="margin-left: -20px;">Title: Software Engineer<mat-divider></mat-divider></mat-card-title>
-            <mat-card-subtitle style="margin-left: -20px;">Location: Huntsville, AL</mat-card-subtitle>
-        </mat-card-header>
-        <mat-card-content>
-            <h6>Description:</h6>
-            <p>.Net Core and SQL Server</p>
-            <a data-toggle="collapse" href="#commentsCollapse" role="button" aria-expanded="false" aria-controls="commentsCollapse">Comments</a>
-            <div class="collapse" id="commentsCollapse">
-                <p>Comments: Blah Blah Blah</p>
+            <div class="form-row">
+                    <div class="form-group" style="width: 100%;">
+                        <label for="company">Company:</label>
+                        <input id="company" class="form-control" type="text" formControlName="company">
+                    </div>
             </div>
-        </mat-card-content>
-        <mat-card-actions>
-             <!-- Add buttons like like or comment -->
-        </mat-card-actions>
-    </mat-card>
-    <mat-card style="margin-bottom: 5px;">
-        <mat-card-header>
-            <mat-card-title style="margin-left: -20px;">Title: Software Engineer<mat-divider></mat-divider></mat-card-title>
-            <mat-card-subtitle style="margin-left: -20px;">Location: Huntsville, AL</mat-card-subtitle>
-        </mat-card-header>
-        <mat-card-content>
-            <h6>Description:</h6>
-            <p>.Net Core and SQL Server</p>
-            <a data-toggle="collapse" href="#commentsCollapse" role="button" aria-expanded="false" aria-controls="commentsCollapse">Comments</a>
-            <div class="collapse" id="commentsCollapse">
-                <p>Comments: Blah Blah Blah</p>
+            <div class="form-row">
+                    <div class="form-group" style="width: 100%;">
+                        <label for="datePosted">Start Date:</label>
+                        <input id="datePosted" class="form-control" type="text" formControlName="datePosted">
+                    </div>
             </div>
-        </mat-card-content>
-        <mat-card-actions>
-             <!-- Add buttons like like or comment -->
-        </mat-card-actions>
-    </mat-card>
-    <mat-card style="margin-bottom: 5px;">
-        <mat-card-header>
-            <mat-card-title style="margin-left: -20px;">Title: Software Engineer<mat-divider></mat-divider></mat-card-title>
-            <mat-card-subtitle style="margin-left: -20px;">Location: Huntsville, AL</mat-card-subtitle>
-        </mat-card-header>
-        <mat-card-content>
-            <h6>Description:</h6>
-            <p>.Net Core and SQL Server</p>
-            <a data-toggle="collapse" href="#commentsCollapse" role="button" aria-expanded="false" aria-controls="commentsCollapse">Comments</a>
-            <div class="collapse" id="commentsCollapse">
-                <p>Comments: Blah Blah Blah</p>
+            <div class="form-row">
+                    <div class="form-group" style="width: 100%;">
+                        <label for="description">Job Description:</label>
+                        <textarea id="description" class="form-control" type="text" formControlName="description"></textarea>
+                    </div>
             </div>
-        </mat-card-content>
-        <mat-card-actions>
-             <!-- Add buttons like like or comment -->
-        </mat-card-actions>
-    </mat-card>
-    
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+          <button type="submit" class="btn btn-primary">Create</button>
+        </div>
+      </div>
+    </form>
+    </div>
 </div>
