Add comment modal.  Comments are now added to firebase

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div>
   <mat-toolbar color="primary" style="margin-bottom: 5px;">
     <mat-toolbar-row>
-      Test
+      Referral
       <!-- TODO: Add icon align right.  Add Login anchor tag alight left -->
     </mat-toolbar-row>
   </mat-toolbar>
