--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <!-- Displays all referrals on the home page -->
 <div class="container" id="feedContainer">
     <button class="btn btn-outline" color="primary" data-toggle="modal" data-target="#createReferralModal" style="margin-bottom: 5px;">Create Referral</button>
-    <mat-card style="margin-bottom: 5px;" *ngFor='let post of posts'>
+    <mat-card style="margin-bottom: 5px;" *ngFor='let post of posts, let i = index'>
         <mat-card-header>
             <mat-card-title style="margin-left: -20px;"><b>Job Title:</b> {{ post.title }}<mat-divider></mat-divider></mat-card-title>
             <!-- <mat-card-subtitle style="margin-left: -20px;">Location: {{ post.location }}</mat-card-subtitle> -->
@@ -10,14 +10,14 @@
             <p>Location: {{ post.location }} <br>
                 Description: {{ post.description }}
             </p>
-            <a data-toggle="collapse" href="#commentsCollapse" (click)="onClickRetriveComments()" role="button" aria-expanded="false" aria-controls="commentsCollapse"> View Comments</a>
-            <div class="collapse" id="commentsCollapse">
-                <p *ngFor='let comment of comments'>Comment: {{ comment.comment }}</p>
+            <a data-toggle="collapse" href="#commentsCollapse_{{i}}" (click)="onClickRetriveComments(i)" role="button" aria-expanded="false" aria-controls="commentsCollapse"> View Comments</a>
+            <div class="collapse" id="commentsCollapse_{{i}}" (clickOutside)="onClickOutside(i)">
+                <p *ngFor='let comment of comments'>Comment: {{ comment.data.comment }}</p>
             </div>
-            <p hidden id="postKey">{{ post.key }}</p>
+            <p hidden id="postKey_{{i}}">{{ post.key }}</p>
         </mat-card-content>
         <mat-card-actions>
-             <button class="btn btn-outline" data-toggle="modal" data-target="#addCommentModal" (click)="addKeyToCreateForm()">Add Comment</button>
+             <button class="btn btn-outline" data-toggle="modal" data-target="#addCommentModal" (click)="addKeyToCreateForm(i)">Add Comment</button>
         </mat-card-actions>
     </mat-card>
 </div>
@@ -68,7 +68,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-          <button type="submit" class="btn btn-primary">Create</button>
+          <button type="submit" class="btn btn-primary" >Create</button>
         </div>
       </div>
     </form>
