Color changes.  Modals now close on submit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div>
-  <mat-toolbar color="primary" style="margin-bottom: 5px;">
+  <mat-toolbar>
     <mat-toolbar-row>
       Referral
       <!-- TODO: Add icon align right.  Add Login anchor tag alight left -->
