--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <!-- Displays all referrals on the home page -->
 <div class="container" id="feedContainer">
-    <button class="btn btn-outline" color="primary" data-toggle="modal" data-target="#createReferralModal" style="margin-bottom: 5px;">Create Referral</button>
-    <mat-card style="margin-bottom: 5px;" *ngFor='let post of posts, let i = index'>
+    <button class="btn btn-outline" data-toggle="modal" data-target="#createReferralModal" style="margin-bottom: 5px;">Create Referral</button>
+    <mat-card *ngFor='let post of posts, let i = index'>
         <mat-card-header>
             <mat-card-title style="margin-left: -20px;"><b>Job Title:</b> {{ post.title }}<mat-divider></mat-divider></mat-card-title>
             <!-- <mat-card-subtitle style="margin-left: -20px;">Location: {{ post.location }}</mat-card-subtitle> -->
@@ -11,7 +11,7 @@
                 Description: {{ post.description }}
             </p>
             <a data-toggle="collapse" href="#commentsCollapse_{{i}}" (click)="onClickRetriveComments(i)" role="button" aria-expanded="false" aria-controls="commentsCollapse"> View Comments</a>
-            <div class="collapse" id="commentsCollapse_{{i}}" (clickOutside)="onClickOutside(i)">
+            <div class="collapse" id="commentsCollapse_{{i}}">
                 <p *ngFor='let comment of comments'>Comment: {{ comment.data.comment }}</p>
             </div>
             <p hidden id="postKey_{{i}}">{{ post.key }}</p>
@@ -67,7 +67,7 @@
             </div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal" #closeBtnReferralModal>Cancel</button>
           <button type="submit" class="btn btn-primary" >Create</button>
         </div>
       </div>
@@ -99,8 +99,8 @@
             </div>-->
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-          <button type="submit" class="btn btn-primary">Create</button>
+          <button type="button" class="btn" data-dismiss="modal" #closeBtnCommentModal>Cancel</button>
+          <button type="submit" class="btn btn-primary" >Create</button>
         </div>
       </div>
     </form>
